fdo#73043: sw: fix Index/TOC Assign Styles dialog

SvTabListBox::GetEntryText(pEntry, 0xffff) will append 10 tabs to the
returned string, so it will no longer be equal to a style name.

(regression from 77173d8954c370bcaca80b48181c330b759b9517)

Change-Id: I7d3bee47eabec9180d6352fb6cf1b2e948153d37
(cherry picked from commit 77a637fb8ddfc4b045b3453f8435822a21198b19)
Reviewed-on: https://gerrit.libreoffice.org/7468
Reviewed-by: Caolán McNamara <caolanm@redhat.com>
Tested-by: Caolán McNamara <caolanm@redhat.com>
(cherry picked from commit c3e7723500275d04177d366b50356807c16e9be1)
Reviewed-on: https://gerrit.libreoffice.org/7471
Reviewed-by: Fridrich Strba <fridrich@documentfoundation.org>
Reviewed-by: Andras Timar <andras.timar@collabora.com>